--- a/moogli/CMakeLists.txt
+++ b/moogli/CMakeLists.txt
@@ -23,8 +23,7 @@ find_package(PyQt5 REQUIRED)
 
 MESSAGE("++ Found SIP flags: ${PYQT5_SIP_FLAGS}")
 SEPARATE_ARGUMENTS(PYQT5_SIP_FLAGS) # convert space separated values to a list
-
-SET(SIP_CONCAT_PARTS 4)
+# SET(SIP_CONCAT_PARTS 4)
 SET(SIP_EXTRA_OPTIONS ${PYQT5_SIP_FLAGS})
 
 IF (NOT BINDINGS_GLOBAL_INSTALL)
