--- a/moogli/bin/sip/CMakeLists.txt
+++ b/moogli/bin/sip/CMakeLists.txt
@@ -18,11 +18,12 @@ SET(GENERATED_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/sip_moogliViewer.cpp
     )
 
-SET(SIP_INCLUDES ${PYQT4_SIP_DIR})
-
-MESSAGE("++ Using SIP includes: ${SIP_INCLUDES}")
+MESSAGE("++ Using SIP includes: ${SIP_INCLUDE_DIR}")
 add_custom_command(OUTPUT ${GENERATED_SRCS}
-    COMMAND ${SIP_EXECUTABLE} -c ${CMAKE_CURRENT_SOURCE_DIR} -I ${SIP_INCLUDES} 
+    COMMAND ${SIP_EXECUTABLE} 
+        -c ${CMAKE_CURRENT_SOURCE_DIR} 
+        -I ${SIP_INCLUDE_DIR} 
+        -I ${PYQT5_SIP_DIR}
         ${SIP_EXTRA_OPTIONS}
         ${CMAKE_CURRENT_SOURCE_DIR}/moogli.sip
     DEPENDS ${SIP_SRC}
